Detailed Q&A with practical real-world Spring Boot examples for Day 1 & 2